--- a/app/build.gradle
+++ b/app/build.gradle
@@ -112,6 +112,7 @@ repositories {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation(name:'lib-release', ext:'aar')
+//    implementation project(':libcore')
     //Android Lib
     implementation 'androidx.percentlayout:percentlayout:1.0.0'
     implementation 'androidx.appcompat:appcompat:1.2.0'
